# School

./: .gitignore  Documents - Shortcut.lnk  README.md  README.txt  asdadas.py  tempCodeRunnerFile.dart
8085/: 16bit-power.sim  8085power.sim  a_plus_b_squared.sim  power.sim  pqwfpohqwpfoq.sim
Advanced Algorithms/: Lab1-HoutManut.cpp  matrix.cpp  queen.cpp  variable.cpp
Advanced Algorithms/Lab2-HoutManut/: Lab2-HoutManut-ex1.cpp  Lab2-HoutManut-ex3.cpp  Lab2-HoutManut-ex4.cpp  Lab2-Houtmanut-ex2.cpp
Advanced Algorithms/cafe/: cafe.h  cafeold.h  main.cpp  mainold.cpp  test.dart
Advanced Mobile Development/: .gitignore
Automata/: .gitignore  MataBot.md
Flutter/: .gitignore
Fundamental of Mobile Development/: .gitignore
Fundamentals of Data Science/: .gitignore  requirements.txt
Fundamentals of Data Science/python/: pyproject.toml
Fundamentals of Data Science/python/Exercises/Week 2/Lab 2 - Pandas/: gen9_cs_lab_2_pandas_hout_manut.ipynb
Fundamentals of Data Science/python/Exercises/Week 2/Lab 2 - Python/: gen9_cs_lab2_python_hout_manut.ipynb
Fundamentals of Data Science/python/Exercises/Week 3/: .gitignore  certified_test.ipynb  certified_test_output.xlsx  pre_test.ipynb  pre_test_output.xlsx  question_pool.ipynb  question_pool_output.xlsx
Fundamentals of Data Science/python/Exercises/Week 5/: cleaned_used_car_dataset.csv  practice_1.ipynb  used_car_dataset.csv
Other/: checkin.sql  contact'.mwb  contact'.mwb.bak  insert.sql  inventory.mwb  inventory.mwb.bak  inventory.sql  inventory.txt  inventory2.sql  test.sql
Software Engineering/: Untitled.mdj
(+316 files in other folders)
