[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "lxml>=5.3.1",
    "matplotlib>=3.10.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "xmltodict>=0.14.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "xmltodict>=0.14.2",
]
